<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">IPBeCourses</string>
    <string name="Gicom_courses">Course search</string>
    <string name="Ipbeja_name">IPBeCourses</string>
    <string name="Ipbeja_button">Start</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Login_button">Login</string>
    <string name="Dont">Dont have an Account?\n Register here</string>
    <string name="SignUp">SignUp</string>
    <string name="Update">Update</string>
    <string name="Name_complet">Full name</string>
    <string name="Email">Email</string>
    <string name="District">District</string>
    <string name="School">School</string>
    <string name="Username_register">Username</string>
    <string name="Password_register">Password</string>
    <string name="SignUp_register">SIGN UP</string>
    <string name="Already_Sign">Already Sign Up?\nLogin Here</string>
    <string name="Course_search">Search for the 1st time</string>
    <string name="Enjoy_10">And enjoy 10% off future tuition fees!</string>
    <string name="All_IPbeja">All about IPBeCourses</string>
    <string name="Share_app">Share the app with your friends</string>
    <string name="IPbeja_since">we meet pleasant courses since 2024.</string>
    <string name="Ipbeja_more">know more</string>
    <string name="Home">Home</string>
    <string name="Search">Search</string>
    <string name="Profile">Profile</string>
    <string name="Support">Support</string>
    <string name="Sharing">Sharing</string>
    <string name="Logout">Logout</string>
    <string name="Search_courses">Search for a course</string>
    <string name="Details_Price">Details about the  course</string>
    <string name="Location_Contact">Location and Contact</string>
    <string name="More">The name of the company that \ncoordinates this application is called IPBeCourses since 2024, the Beja Polytechnic Institute is a public higher education institution, made up of four schools. It is located in the city of Beja,it was created in 1979.</string>
    <string name="About">About</string>
    <string name="CTeSP">Cursos Técnicos Superiores Profissionais</string>
    <string name="Licenciaturas">Licenciaturas</string>
    <string name="Mestrados">Mestrados</string>
</resources>