<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#F4EEEA"
    android:focusableInTouchMode="true"
    tools:context=".view.registerActivity">

   <androidx.cardview.widget.CardView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="30dp"
       app:cardCornerRadius="30dp"
       app:cardElevation="20dp">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="684dp"
          android:layout_gravity="center_horizontal"
          android:background="@drawable/lavender_border"
          android:orientation="vertical"
          android:padding="24dp">

         <TextView
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/SignUp"
             android:textAlignment="center"
             android:textColor="#2DE65B"
             android:textSize="36sp"
             android:textStyle="bold" />

         <EditText
             android:id="@+id/et_nome"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="40dp"
             android:background="@drawable/lavender_border"
             android:drawableLeft="@drawable/ic_full_name"
             android:drawablePadding="8dp"
             android:hint="@string/Name_complet"
             android:inputType="textPersonName"
             android:padding="8dp" />


         <EditText
             android:id="@+id/et_email"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/lavender_border"
             android:drawableLeft="@drawable/ic_email"
             android:drawablePadding="8dp"
             android:hint="@string/Email"
             android:padding="8dp"/>

         <EditText
             android:id="@+id/et_distrito"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/lavender_border"
             android:drawableLeft="@drawable/ic_location"
             android:drawablePadding="8dp"
             android:hint="@string/District"
             android:padding="8dp"/>

         <EditText
             android:id="@+id/et_escola"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/lavender_border"
             android:drawableLeft="@drawable/baseline_school_24"
             android:drawablePadding="8dp"
             android:hint="@string/School"
             android:padding="8dp"/>


         <EditText
             android:id="@+id/et_username"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/lavender_border"
             android:drawableLeft="@drawable/ic_identity"
             android:drawablePadding="8dp"
             android:hint="@string/Username"
             android:padding="8dp"/>

         <EditText
             android:id="@+id/et_password"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/lavender_border"
             android:drawableLeft="@drawable/ic_lock"
             android:drawablePadding="8dp"
             android:hint="@string/Password_register"
             android:inputType="textPassword"
             android:padding="8dp"/>

         <Button
             android:id="@+id/btn_registrar"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginTop="30dp"
             android:backgroundTint="@color/purple_700"
             android:text="@string/SignUp_register"
             android:textSize="18sp"
             app:cornerRadius="20dp" />

         <TextView
             android:id="@+id/btnLogin"
             android:layout_width="231dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
             android:onClick="LoginHere"
             android:padding="8dp"
             android:text="@string/Already_Sign"
             android:textAlignment="center"
             android:textSize="14sp" />

      </LinearLayout>

   </androidx.cardview.widget.CardView>

</LinearLayout>