<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:focusableInTouchMode="true"
    android:background="#F4EEEA"
    tools:context=".view.loginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/lavender_border"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/About"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Login"
                android:textAlignment="center"
                android:textColor="#2DE65B"
                android:textSize="34sp"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="324dp"
                android:layout_height="133dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toTopOf="@+id/et_username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/About"
                app:layout_constraintVertical_bias="0.23000002"
                app:srcCompat="@drawable/logo" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/lavender_border"
                android:drawableLeft="@drawable/ic_identity"
                android:inputType="text"
                android:ems="10"
                android:drawablePadding="8dp"
                android:hint="@string/Username"
                android:padding="8dp"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/lavender_border"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="8dp"
                android:hint="@string/Password_register"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

            <Button
                android:id="@+id/bt_mestra"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/purple_700"
                android:text="@string/Login_button"
                android:textSize="18sp"
                app:cornerRadius="20dp" />
            <TextView
                android:id="@+id/tvCreateAccount"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:onClick="RegisterHere"
                android:padding="8dp"
                android:text="@string/Dont"
                android:textAlignment="center"
                android:textSize="14sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.appcompat.widget.LinearLayoutCompat>