<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4EEEA"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".view.MainActivity">


    <RelativeLayout
        android:id="@+id/orange_rectangle"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="520dp"
        android:background="#FFD0BA"
        app:layout_constraintBottom_toTopOf="@+id/coordinatorLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">



        <TextView
            android:id="@+id/textView7"
            android:layout_width="190dp"
            android:layout_height="86dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="209dp"
            android:layout_marginTop="-2dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="109dp"
            android:text="@string/All_IPbeja"
            android:textColor="#FF000000"
            android:textSize="28dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="wrap_content"
            android:layout_height="93dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="210dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="41dp"
            android:text="@string/IPbeja_since"
            android:textColor="#FF000000"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView31"
            android:layout_width="174dp"
            android:layout_height="117dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="227dp"
            android:layout_marginBottom="54dp"
            app:srcCompat="@drawable/ebeja" />

        <Button
            android:id="@+id/button"
            android:layout_width="162dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView30"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="37dp"
            android:layout_marginBottom="21dp"
            android:backgroundTint="@color/purple_700"
            android:onClick="Sobre"
            android:text="@string/Ipbeja_more"
            android:textColor="#FF000000" />

        <ImageView
            android:id="@+id/imageView_feedback"
            android:layout_width="120dp"
            android:layout_height="44dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="476dp"
            app:srcCompat="@drawable/logo" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/green_rectangle"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#2DE65B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView6"
            android:layout_width="190dp"
            android:layout_height="86dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="52dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="169dp"
            android:layout_marginBottom="86dp"
            android:text="@string/Gicom_courses"
            android:textColor="#FFFFFF"
            android:textSize="28dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="47dp"
            android:layout_marginEnd="175dp"
            android:layout_marginBottom="7dp"
            android:text="@string/Enjoy_10"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="174dp"
            android:layout_height="117dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="234dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="60dp"
            app:srcCompat="@drawable/aluno" />

    </RelativeLayout>

    <WebView
        android:id="@+id/webView"
        android:layout_width="389dp"
        android:layout_height="236dp"
        app:layout_constraintBottom_toTopOf="@+id/orange_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/green_rectangle"
        app:layout_constraintVertical_bias="0.455" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:backgroundTint="#f6f6f6"
            app:fabCradleMargin="8dp"
            app:fabCradleRoundedCornerRadius="50dp"
            app:fabCradleVerticalOffset="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/homeBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/baseline_home_24" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Home"
                        android:textAlignment="center"
                        android:textColor="#676767"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Search"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView20"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="Search"
                        app:srcCompat="@drawable/search" />

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Search"
                        android:textAlignment="center"
                        android:textColor="#676767"
                        android:textSize="12sp" />
                </LinearLayout>



                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="Message"
                        app:srcCompat="@drawable/profile" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Support"
                        android:textAlignment="center"
                        android:textColor="#676767"
                        android:textSize="12sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="Share"
                        app:srcCompat="@drawable/partilha" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Sharing"
                        android:textAlignment="center"
                        android:textColor="#676767"
                        android:textSize="12sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/logoutButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="logout"
                        android:background="@android:color/transparent"
                        app:srcCompat="@drawable/baseline_logout_24" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Logout"
                        android:textAlignment="center"
                        android:textColor="#676767"
                        android:textSize="12sp" />
                </LinearLayout>


            </LinearLayout>

        </com.google.android.material.bottomappbar.BottomAppBar>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
